# perso-2024b-fennerspohr

./: .gitignore  README.md  clave.cabal  helloScotty.hs  package-lock.json  stack.yaml  teste  teste.hi  teste.hs  teste.txt
.devcontainer/: Dockerfile  devcontainer.json
clave/: CHANGELOG.md  README.md  clave.cabal
clave/src/: Main.hs  teste.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: base.css  main.css
src/: Main.hs  letras.txt  teste.txt  testes.txt
